<resources>
    <string name="app_name">AttendGO</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plz_input_email">Please input your email!</string>
    <string name="title_scanner">Scanner</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password_requirement">Please input your email to received\n the verified link:</string>
    <string name="send_link">Send Link</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="check_in">Check In</string>
    <string name="scan">Scan</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_profile">Profile</string>
    <string name="scanning_reminder">Place a QR Code inside the scan area</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="date_time">Date and Time</string>
    <string name="submit">Submit</string>
    <string name="event_code">Event Code</string>
    <string name="host_s_name">Host\'s Name</string>
    <string name="err_permission_not_granted">Permission is not granted...</string>
    <string name="prompt_user_id">User ID</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_name">New Name</string>
    <string name="new_email">New Email</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="events_created_by_you">Events Created by You</string>
    <string name="scanned_attendance">Scanned Attendance</string>
    <string name="setting">Setting</string>
    <string name="create_an_event">Create an Event</string>
    <string name="add">ADD</string>
    <string name="change_my_password">Change My Password</string>
    <string name="org_name">Organization Name (If no just put a "-")</string>
    <string name="select_location">Select Location</string>
    <string name="any_description">Description (If no just put a "-")</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>